# open-app-config

./: .env.example  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
cli/: Cargo.toml
client/: Cargo.toml
client/src/: cached.rs  lib.rs  main.rs
client/tests/: client_integration.rs  e2e_test.rs
server/: Cargo.toml
server/src/: main.rs
server/src/http/: dto.rs  error.rs  handlers.rs  mod.rs  server.rs  state.rs  tests.rs
server/src/storage/: backend.rs  config.rs  error.rs  metadata.rs  mod.rs  tests.rs  traits.rs
server/tests/: http_integration.rs  storage_integration.rs  storage_test.rs
shared-types/: Cargo.toml
shared-types/src/: lib.rs
storage-backend/: Cargo.toml
storage-backend/examples/: local_storage.rs
storage-backend/src/: backend.rs  config.rs  error.rs  lib.rs  metadata.rs  tests.rs
