[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-types = { path = "../shared-types" }
reqwest = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
