[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
name = "client"
path = "src/lib.rs"

[dependencies]
shared-types = { path = "../shared-types" }
reqwest = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = "1.19"

[dev-dependencies]
mockito = "1.2"
tokio = { workspace = true, features = ["full", "test-util"] }
server = { path = "../server" }

[lints]
workspace = true
