[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-types = { path = "../shared-types" }
storage-backend = { path = "../storage-backend" }
axum = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
