[package]
name = "server"
version = "0.1.0"
edition = "2024"

[lib]
name = "server"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
shared-types = { path = "../shared-types" }
axum = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "trace"] }
async-trait = { workspace = true }
thiserror = { workspace = true }
object_store = { version = "0.11", features = ["aws"] }
bytes = "1.5"
uuid = { version = "1.7", features = ["v4", "serde"] }
futures = "0.3"
jsonschema = "0.24"
dotenvy = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { workspace = true }
tempfile = "3.8"
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
