[package]
name = "storage-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-types = { path = "../shared-types" }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
object_store = { version = "0.11", features = ["aws"] }
bytes = "1.5"
uuid = { version = "1.7", features = ["v4", "serde"] }
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { workspace = true }
tempfile = "3.8"
